bug fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a {
     -moz-box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.19);
     box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.19);
     background-color: var(--primario);
-    width: 100vw;
+    width: 100%;
 }
 
 .navbar {
@@ -360,7 +360,7 @@ main {
     padding-top: 4rem;
     background-color: var(--primario);
     padding-bottom: 2rem;
-    width: 100vw;
+    width: 100%;
 }
 
 .featured h3 {
